rendered/envs/friclu/keycloak/service-keycloak-keycloakx-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: http
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloakx-7.1.3
  name: keycloak-keycloakx-http
  namespace: keycloak
spec:
  ports:
    - name: http-internal
      port: 9000
      protocol: TCP
      targetPort: http-internal
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloakx
  type: ClusterIP
