rendered/envs/friclu/keycloak/ingress-keycloak-keycloakx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloakx
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloakx-7.1.3
  name: keycloak-keycloakx
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
    - host: catchat-friclu.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: keycloak-keycloakx-http
                port:
                  name: http
            path: /auth
            pathType: Prefix
  tls:
    - hosts:
        - catchat-friclu.duckdns.org
      secretName: keycloak-certificate
